# tauri-plugin-rstate

./: .gitignore  Cargo.toml  LICENSE  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
crates/plugin-rstate/: Cargo.toml  build.rs
crates/plugin-rstate/permissions/: default.toml
crates/plugin-rstate/permissions/autogenerated/: reference.md
crates/plugin-rstate/permissions/autogenerated/commands/: dispatch.toml  get_initial_state.toml
crates/plugin-rstate/permissions/schemas/: schema.json
crates/plugin-rstate/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  state_builder.rs
examples/svelte/: eslint.config.js  package.json  svelte.config.js  vite.config.js
examples/svelte/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte/src-tauri/capabilities/: default.json
examples/svelte/src-tauri/src/: lib.rs  state.rs
examples/svelte/src/lib/: utils.ts
examples/svelte/src/routes/: +layout.svelte  +page.svelte
