[package]
name = "tauri-plugin-rstate"
version = "0.1.0"
license = "MIT"
authors = [ "Brilliant Nz" ]
links = "tauri-plugin-rstate"
repository = "https://github.com/imoize/tauri-plugin-rstate"
homepage = "https://github.com/imoize/tauri-plugin-rstate"

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[dependencies]
tauri = { version = "2.9.5" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
